hydroflow/tests/compile-fail/surface_demux_badclosure.stderr
error: Closure provided to `demux(..)` must have two arguments: the first argument is the item, and the second argument lists ports. E.g. the second argument could be `var_args!(port_a, port_b, ..)`.
 --> tests/compile-fail/surface_demux_badclosure.rs:5:49
  |
5 |         my_demux = source_iter(0..10) -> demux(|var_args!(a, b, c)| {
  |                                                 ^^^^^^^^^^^^^^^^^^

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demux_badclosure.rs:1:35
  |
1 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
